--- a/style.css
+++ b/style.css
@@ -84,14 +84,14 @@ h1{
     background-color: var(--accent-color);
 }
 
-.h3{
+.advantages-title{
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
     text-transform: uppercase;
 }
 
-.p{
+.text{
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
@@ -107,7 +107,6 @@ h1{
 }
 
 .name{
-    font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
@@ -115,7 +114,6 @@ h1{
 }
 
 .job{
-    font-family: 'Roboto';
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
@@ -126,4 +124,8 @@ h1{
 
 address{
     font-style: normal;
+}
+
+footer{
+    background-color: var(--hero-background);
 }
